--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id = "contenido"> 
             <P>No me vas a creer pero...</P>
-            <p id="excuse">My dog eat my homework</p>
+            <p id="excuse"></p>
         </div>
     </body>
 </html>
